# QuantumMind-Programming-Language

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  File Structure.md  README.md  framework.qm  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: ci.yml
config/default/: runtime_config.yaml
docs/: index.md
docs/getting_started/: quick_start.md
examples/: README.md
examples/getting_started/: 01_hello_quantum_world.qm
scripts/development/: build-structure.sh
scripts/installation/: install-quantummind.sh
src/: README.md
src/quantummind/: __init__.py
src/quantummind/cli/: main.py
src/quantummind/cli/commands/: __init__.py  compile.py  compile_cmd.py  deploy_cmd.py  dev_cmd.py  docs_cmd.py  pkg_cmd.py  quantum_cmd.py  run_cmd.py  system_cmd.py
src/quantummind/compiler/: __init__.py
src/quantummind/compiler/bootstrap/: transpiler.py
src/quantummind/core/: __init__.py
src/quantummind/core/types/: hybrid_types.qm  neural_types.qm  quantum_types.qm  resource_types.qm
tests/: conftest.py
tests/unit/compiler/: test_transpiler.py
