[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantummind"
version = "1.0.0-alpha"
description = "Quantum-AI Hybrid Programming Language Framework"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "QuantumMind Development Team", email = "dev@quantummind.org"}
]
maintainers = [
    {name = "QuantumMind Development Team", email = "dev@quantummind.org"}
]
keywords = [
    "quantum computing",
    "artificial intelligence", 
    "machine learning",
    "hybrid systems",
    "programming language"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0", 
    "pydantic>=1.8.0",
    "click>=8.0.0",
    "pyyaml>=5.4.0",
    "aiohttp>=3.8.0",
    "matplotlib>=3.4.0",
    "networkx>=2.6.0",
    "sympy>=1.9.0"
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.40.0",
    "cirq>=1.0.0", 
    "pennylane>=0.30.0"
]
neural = [
    "torch>=1.12.0",
    "tensorflow>=2.10.0",
    "transformers>=4.20.0",
    "scikit-learn>=1.0.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "isort>=5.10.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0"
]
all = [
    "quantummind[quantum,neural,dev,docs]"
]

[project.urls]
Homepage = "https://github.com/mupoese/QuantumMind-Programming-Language"
Documentation = "https://quantummind.readthedocs.io/"
Repository = "https://github.com/mupoese/QuantumMind-Programming-Language.git"
"Bug Tracker" = "https://github.com/mupoese/QuantumMind-Programming-Language/issues"
Changelog = "https://github.com/mupoese/QuantumMind-Programming-Language/blob/main/CHANGELOG.md"

[project.scripts]
quantummind = "quantummind.cli.main:main"
qm = "quantummind.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantummind = ["**/*.qm", "**/*.yaml", "**/*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"